# delta

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
delta_framework/: __init__.py  api.py  resnet.py
delta_framework/core/: __init__.py  benchmarker.py  bounds.py  equivalence.py  policy.py  shift_detector.py  trainer.py
delta_framework/experiments/: __init__.py  run_experiment.py
delta_framework/web/: __init__.py  server.py
delta_framework/web/static/: app.js  index.html  monitor.html  results.html  styles.css
docs/: USAGE.md
examples/: __init__.py  template.py  utils.py
tests/: conftest.py  test_validation.py
tests/integration/: test_run_experiment_smoke.py
tests/unit/: test_api.py  test_bounds.py  test_equivalence.py  test_policy.py  test_shift_detector.py  test_web_server.py
ui/: app.py
