[tool.poetry]
name = "delta-framework"
version = "0.1.0"
description = "Delta-only class-incremental learning benchmark framework"
authors = ["Delta Framework Contributors"]
readme = "README.md"
license = "MIT"
packages = [{ include = "delta_framework" }]
include = ["delta_framework/web/static/**/*"]
keywords = ["incremental-learning", "class-incremental-learning", "pytorch", "benchmark"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
numpy = ">=1.22.3"
continuum = { version = "1.2.2", optional = true }
torch = { version = ">=2.0.0", optional = true }
torchvision = { version = ">=0.15.0", optional = true }

# Optional legacy Streamlit dashboard
streamlit = { version = ">=1.25.0", optional = true }
pandas = { version = ">=1.5.0", optional = true }
matplotlib = { version = ">=3.7.0", optional = true }

# Optional (example scripts)
timm = { version = ">=0.5.4", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
ruff = "^0.12.0"

[tool.poetry.extras]
ml = ["continuum", "torch", "torchvision"]
ui = ["streamlit", "pandas", "matplotlib"]
app = ["continuum", "torch", "torchvision"]
examples = ["timm"]

[tool.poetry.scripts]
delta-benchmark = "delta_framework.experiments.run_experiment:main"
delta-webapp = "delta_framework.web.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
  ".git",
  ".venv",
  "htmlcov",
  "examples",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=0",
    "-v"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow running tests"
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/venv/*",
    "*/site-packages/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/settings/*",
    "setup.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
